@@ -14,8 +14,8 @@ Build-Depends: gawk,
                libglib2.0-dev (>= 2.36.0),
                libgtk2.0-dev (>= 2.24.10),
                gir1.2-gtk-2.0,
-               libgtk-3-dev (>= 3.6.0),
-               gir1.2-gtk-3.0 (>= 3.0.0),
+               libgtk-3-dev (>= 3.10.0),
+               gir1.2-gtk-3.0 (>= 3.10.0),
                libpango1.0-dev (>= 1.30.0),
                libharfbuzz-dev (>= 0.9.18),
                libcairo2-dev (>= 1.10),
